--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,12 @@
 defaults:
   -
     scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "posts"
+  -
+    scope:
       path: "" # an empty string here means all files in the project
     values:
       layout: "default"
